--- a/data/index.html
+++ b/data/index.html
@@ -22,10 +22,11 @@
   <div id="chart-temperature" class="container"></div>
   <div id="chart-humidity" class="container"></div>
   <div id="chart-pressure" class="container"></div>
+  <input type="file" id="csv-file-input" accept=".csv">
 </body>
 <script>
 var chartT = new Highcharts.Chart({
-  chart:{ renderTo : 'chart-temperature' },
+  chart: { renderTo: 'chart-temperature' },
   title: { text: 'BME280 Temperature' },
   series: [{
     showInLegend: false,
@@ -38,7 +39,8 @@ var chartT = new Highcharts.Chart({
     },
     series: { color: '#059e8a' }
   },
-  xAxis: { type: 'datetime',
+  xAxis: {
+    type: 'datetime',
     dateTimeLabelFormats: { second: '%H:%M:%S' }
   },
   yAxis: {
@@ -48,20 +50,37 @@ var chartT = new Highcharts.Chart({
   credits: { enabled: false }
 });
 
-var socket = new WebSocket("ws://192.168.0.220/ws");
+document.getElementById("csv-file-input").addEventListener("change", handleFileSelect);
 
-socket.onmessage = function(event) {
-  var x = (new Date()).getTime();
-  var y = parseFloat(event.data);
-  
-  if (chartT.series[0].data.length > 40) {
-    chartT.series[0].addPoint([x, y], true, true, true);
-  } else {
-    chartT.series[0].addPoint([x, y], true, false, true);
+function handleFileSelect(event) {
+  var file = event.target.files[0];
+  var reader = new FileReader();
+
+  reader.onload = function(e) {
+    var contents = e.target.result;
+    var dataFromCSV = parseCSV(contents);
+    chartT.series[0].setData(dataFromCSV);
+  };
+
+  reader.readAsText(file);
+}
+
+function parseCSV(csv) {
+  var lines = csv.split("\n");
+  var data = [];
+
+  for (var i = 1; i < lines.length; i++) { // Start from 1 to skip the header row
+    var parts = lines[i].split(",");
+    if (parts.length === 2) {
+      var timestamp = Date.parse(parts[0]);
+      var value = parseFloat(parts[1]);
+      if (!isNaN(timestamp) && !isNaN(value)) {
+        data.push([timestamp, value]);
+      }
+    }
   }
 
-  // Update the temperature display
-  document.getElementById("temperature-display").innerHTML = y + "ºC";
-};
+  return data;
+}
 </script>
 </html>
